--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI for Flask App
+name: CI/CD for Flask App
 
 on:
   push:
@@ -7,31 +7,43 @@ on:
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
-
     steps:
-      # Клонируем код из нашего репозитория
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # Настраиваем QEMU (нужно для сборки мульти-архитектурных образов)
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
 
-      # Настраиваем Docker Buildx (сборщик образов)
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      # Логинимся в Docker Hub
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      # Собираем Docker-образ и публикуем его в Docker Hub
       - name: Build and push Docker image
         uses: docker/build-push-action@v4
         with:
           context: ./lab-5
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/flask-docker-lab:latest
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build-and-push
+
+    steps:
+      - name: Deploy to server
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.SERVER_HOST }}
+          username: ${{ secrets.SERVER_USER }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          script: |
+            cd flask-docker-lab
+            git pull origin main
+            cd lab-5
+            docker-compose pull web
+            docker-compose up -d
