--- a/lab-5/docker-compose.yml
+++ b/lab-5/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   web:
-    build: .
+    image: shutovks/flask-docker-lab:latest
     expose:
       - "5001"
     deploy:
@@ -29,15 +29,11 @@ services:
       - POSTGRES_USER=user
       - POSTGRES_PASSWORD=password
       - POSTGRES_DB=flask_db
-    ports:
-      - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data/
 
   redis:
     image: "redis:alpine"
-    ports:
-      - "6379:6379"
 
 volumes:
   postgres_data:
