--- a/lab-5/docker-compose.yml
+++ b/lab-5/docker-compose.yml
@@ -5,6 +5,11 @@ services:
       - "5001"
     deploy:
       replicas: 3
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:5001/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
     environment:
       - POSTGRES_USER=user
       - POSTGRES_PASSWORD=password
@@ -25,6 +30,22 @@ services:
       - certbot_www:/var/www/certbot
     depends_on:
       - web
+
+  prometheus:
+    image: prom/prometheus:latest
+    ports:
+      - "9090:9090"
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+    command:
+      - '--config.file=/etc/prometheus/prometheus.yml'
+
+  grafana:
+    image: grafana/grafana:latest
+    ports:
+      - "3000:3000"
+    volumes:
+      - grafana_data:/var/lib/grafana
 
   certbot:
     image: certbot/certbot
@@ -48,3 +69,4 @@ volumes:
   postgres_data:
   certbot_conf:
   certbot_www:
+  grafana_data:
