--- a/lab-5/docker-compose.yml
+++ b/lab-5/docker-compose.yml
@@ -67,6 +67,7 @@ services:
       - "9090:9090"
     volumes:
       - ./prometheus.yml:/etc/prometheus/prometheus.yml
+      - /var/run/docker.sock:/var/run/docker.sock:ro
     command:
       - '--config.file=/etc/prometheus/prometheus.yml'
 
