--- a/lab-5/prometheus.yml
+++ b/lab-5/prometheus.yml
@@ -3,8 +3,13 @@ global:
 
 scrape_configs:
   - job_name: 'flask-app'
-    dns_sd_configs:
-      - names:
-          - 'tasks.web'
-        type: 'A'
-        port: 5001
+    docker_sd_configs:
+      - host: unix:///var/run/docker.sock
+    relabel_configs:
+      - source_labels: [__meta_docker_compose_service]
+        regex: web
+        action: keep
+      - source_labels: [__address__]
+        regex: '.*:(\d+)'
+        replacement: '${1}:5001'
+        target_label: __address__
