--- a/lab-5/prometheus.yml
+++ b/lab-5/prometheus.yml
@@ -2,14 +2,18 @@ global:
   scrape_interval: 15s
 
 scrape_configs:
-  - job_name: 'flask-app'
+  - job_name: 'flask_app'
+    metrics_path: /metrics
     docker_sd_configs:
-      - host: unix:///var/run/docker.sock
+      - host: "unix:///var/run/docker.sock"
+        filters:
+          - name: "name"
+            values: ["web"]
     relabel_configs:
-      - source_labels: [__meta_docker_compose_service]
+      - source_labels: [__meta_docker_container_label_com_docker_compose_service]
         regex: web
         action: keep
       - source_labels: [__address__]
-        regex: '.*:(\d+)'
-        replacement: '${1}:5001'
         target_label: __address__
+        regex: '(.*):\d+'
+        replacement: '$1:5001'
