--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,4 +50,4 @@ jobs:
             git clean -fd
             git pull origin main
             docker compose pull web
-            docker-compose up -d --force-recreate 
+            docker compose up -d --force-recreate 
