--- a/lab-5/docker-compose.yml
+++ b/lab-5/docker-compose.yml
@@ -40,6 +40,7 @@ services:
     image: elasticsearch:7.9.3
     environment:
       - discovery.type=single-node
+      - "ES_JAVA_OPTS=-Xms512m -Xmx512m" 
     ports:
       - "9200:9200"
     volumes:
