--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,4 +52,5 @@ jobs:
             docker compose pull web
             # docker compose up -d --force-recreate 
             docker stack rm myapp
+            sleep 10
             docker stack deploy -c docker-compose.yml myapp
