--- a/lab-5/nginx/default.conf
+++ b/lab-5/nginx/default.conf
@@ -4,6 +4,7 @@ upstream flask_app {
 
 server {
     listen 80;
+    listen [::]:80 default_server ipv6only=off;
     server_name quiz-portal.online;
 
     location /.well-known/acme-challenge/ {
@@ -17,6 +18,7 @@ server {
 
 server {
     listen 443 ssl;
+    listen [::]:443 ssl ipv6only=off;
     server_name quiz-portal.online;
 
     ssl_certificate /etc/letsencrypt/live/quiz-portal.online/fullchain.pem;
