--- a/lab-5/docker-compose.yml
+++ b/lab-5/docker-compose.yml
@@ -85,6 +85,12 @@ services:
     volumes:
       - certbot_conf:/etc/letsencrypt
       - certbot_www:/var/www/certbot
+    entrypoint: >
+      sh -c 'trap exit TERM;
+            while :; do
+              certbot renew --webroot -w /var/www/certbot;
+              sleep 12h;
+            done'
 
   db:
     image: postgres:13
