--- a/lab-5/nginx/default.conf
+++ b/lab-5/nginx/default.conf
@@ -1,4 +1,4 @@
-upstream flask_app {
+upstream flask-app {
     server web:5001;
 }
 
@@ -28,7 +28,7 @@ server {
     ssl_prefer_server_ciphers on;
 
     location / {
-        proxy_pass http://flask_app;
+        proxy_pass http://flask-app;
 
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
