--- a/lab-5/nginx/default.conf
+++ b/lab-5/nginx/default.conf
@@ -16,23 +16,23 @@ server {
     }
 }
 
-server {
-    listen 443 ssl;
-    listen [::]:443 ssl ipv6only=off;
-    server_name quiz-portal.online;
+# server {
+#     listen 443 ssl;
+#     listen [::]:443 ssl ipv6only=off;
+#     server_name quiz-portal.online;
 
-    ssl_certificate /etc/letsencrypt/live/quiz-portal.online/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/quiz-portal.online/privkey.pem;
+#     ssl_certificate /etc/letsencrypt/live/quiz-portal.online/fullchain.pem;
+#     ssl_certificate_key /etc/letsencrypt/live/quiz-portal.online/privkey.pem;
 
-    ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_prefer_server_ciphers on;
+#     ssl_protocols TLSv1.2 TLSv1.3;
+#     ssl_prefer_server_ciphers on;
 
-    location / {
-        proxy_pass http://flask-app;
+#     location / {
+#         proxy_pass http://flask-app;
 
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
-}
+#         proxy_set_header Host $host;
+#         proxy_set_header X-Real-IP $remote_addr;
+#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#         proxy_set_header X-Forwarded-Proto $scheme;
+#     }
+# }
